# test_servier

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  run.sh
app/: main.py
app/configs/: config.py
app/models/: drugs.py  pubmed_trials.py  referenced_drugs.py
app/utils/: utils.py
configs/: config.py
data/staging/: curated_2024-11-02 13:31:40.740757.json  curated_2024-11-03 13:12:55.587911  curated_2024-11-03 16:27:12.687186  curated_2024-11-07 23:15:23.353023.json  curated_2024-11-07 23:45:59.475987.json
models/: clinnical_trials_model.py  pubmed_trials.py
tests/: conftest.py  test_main.py  test_models.py  test_utils.py
tests/integration/: test_e2e.py
utils/: utils.py
